--- a/css/nav.css
+++ b/css/nav.css
@@ -10,7 +10,7 @@
     width: 100%;
     min-height: 100%;
     max-height: 100%;
-    background: rgba(0, 0, 0);
+    background: rgba(0, 0, 0, 0.6);
 
     padding: 50px;
     overflow-y: auto;
@@ -134,7 +134,7 @@
 
 .nav-bottom {
     position: absolute;
-    bottom: 20px;
+    bottom: 5rem;
     left: 0;
     right: 0;
 
